--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -2,7 +2,7 @@
 
 <section class="content">
   <section class="invoice">
-    <form #form="ngForm" novalidate>
+    <form [formGroup]="orderForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -11,7 +11,59 @@
         </div>
       </div>
 
-      <div class="row invoice-info">
+      <div class="row">
+        <div class="col-xs-12 col-sm-9">
+          <div class="lead">Seus Dados:</div>
+        </div>
+
+        <div class="col-sm-3">
+          <span
+            class="help-block pull-right has-error-block"
+            *ngIf="orderForm.hasError('emailsNotMatch')"
+          >
+            <i class="fa fa-remove"> </i> E-mails não conferem
+          </span>
+        </div>
+
+        <div class="col-sm-4 col-xs-12">
+          <mt-input-container
+            label="Nome"
+            errorMessage="Campo obrigatório com no min 5 caracteres"
+          >
+            <input
+              class="form-control"
+              placeholder="Nome"
+              autocomplete="off"
+              formControlName="name"
+            />
+          </mt-input-container>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <mt-input-container label="E-mail" errorMessage="E-mail inválido">
+            <input
+              class="form-control"
+              formControlName="email"
+              placeholder="E-mail"
+              autocomplete="off"
+            />
+          </mt-input-container>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <mt-input-container
+            label="Confirmação de e-mail"
+            errorMessage="E-mail inválido"
+          >
+            <input
+              class="form-control"
+              formControlName="emailConfirmation"
+              placeholder="Confirmação de e-mail"
+              autocomplete="off"
+            />
+          </mt-input-container>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-xs-12">
           <p class="lead">Endereço de Entrega:</p>
         </div>
@@ -22,12 +74,9 @@
           >
             <input
               class="form-control"
-              name="address"
-              required
-              minlength="5"
+              formControlName="address"
               placeholder="Endereço"
               autocomplete="off"
-              ngModel
             />
           </mt-input-container>
         </div>
@@ -39,12 +88,9 @@
             <input
               class="form-control"
               placeholder="Número"
-              name="number"
-              required
+              formControlName="number"
               placeholder="Número"
               autocomplete="off"
-              pattern="^[0-9]*$"
-              ngModel
             />
           </mt-input-container>
         </div>
@@ -56,10 +102,9 @@
             <input
               class="form-control"
               placeholder="Complemento"
-              name="optionalAddress"
+              formControlName="optionalAddress"
               placeholder="Complemento"
               autocomplete="off"
-              ngModel
             />
           </mt-input-container>
         </div>
@@ -87,8 +132,7 @@
           <div class="form-group">
             <mt-radio
               [options]="paymentOptions"
-              name="paymentOption"
-              ngModel
+              formControlName="paymentOption"
             ></mt-radio>
           </div>
         </div>
@@ -109,8 +153,8 @@
       <div class="col-xs-12">
         <button
           class="btn btn-success pull-right"
-          [disabled]="!form.valid || cartItems().length === 0"
-          (click)="checkOrder(form.value)"
+          [disabled]="!orderForm.valid || cartItems().length === 0"
+          (click)="checkOrder(orderForm.value)"
         >
           <i class="fa fa-credit-card"></i> Concluir Pedido
         </button>
